--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "select-philippines-address": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
