--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
