--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "select-philippines-address": "^1.0.6"
+    "select-philippines-address": "^1.0.6",
+    "usegeoaddress": "^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
